fix: some bugfixes and relocating deactivateTeam route to team routes from user routes
